test/log/reduction/vrdotp_vv_u16_m1.txt
vrdotp_vv_u16_m1.c:9:2: warning: multi-line comment [-Wcomment]
    9 |  //#define data_init_bool(a, b, n, threshold) \
      |  ^
vrdotp_vv_u16_m1.c:11:44: warning: backslash and newline separated by space
   11 |  #define data_init_scalar(a, b, threshold) \
      |                                             
vrdotp_vv_u16_m1.c:30:6: warning: no previous prototype for 'vrdotp_vv_u16_m1_golden' [-Wmissing-prototypes]
   30 | void vrdotp_vv_u16_m1_golden(uint64_t *mask,uint16_t *a,uint16_t *b,uint16_t *c,uint16_t *exp_result) {
      |      ^~~~~~~~~~~~~~~~~~~~~~~
vrdotp_vv_u16_m1.c: In function 'vrdotp_vv_u16_m1_golden':
vrdotp_vv_u16_m1.c:31:1: error: unknown type name 'Operator'
   31 | Operator Line --- TODO
      | ^~~~~~~~
vrdotp_vv_u16_m1.c:31:15: error: expected '=', ',', ';', 'asm' or '__attribute__' before '--' token
   31 | Operator Line --- TODO
      |               ^~
vrdotp_vv_u16_m1.c:35:5: warning: 'main' is normally a non-static function [-Wmain]
   35 | int main(void) {
      |     ^~~~
vrdotp_vv_u16_m1.c: In function 'main':
vrdotp_vv_u16_m1.c:37:14: warning: declaration of 'mask' shadows a parameter [-Wshadow]
   37 |     bool32_t mask;
      |              ^~~~
vrdotp_vv_u16_m1.c:30:40: note: shadowed declaration is here
   30 | void vrdotp_vv_u16_m1_golden(uint64_t *mask,uint16_t *a,uint16_t *b,uint16_t *c,uint16_t *exp_result) {
      |                              ~~~~~~~~~~^~~~
vrdotp_vv_u16_m1.c:38:17: warning: declaration of 'a' shadows a parameter [-Wshadow]
   38 |     uint16x32_t a;
      |                 ^
vrdotp_vv_u16_m1.c:30:55: note: shadowed declaration is here
   30 | void vrdotp_vv_u16_m1_golden(uint64_t *mask,uint16_t *a,uint16_t *b,uint16_t *c,uint16_t *exp_result) {
      |                                             ~~~~~~~~~~^
vrdotp_vv_u16_m1.c:39:17: warning: declaration of 'b' shadows a parameter [-Wshadow]
   39 |     uint16x32_t b;
      |                 ^
vrdotp_vv_u16_m1.c:30:67: note: shadowed declaration is here
   30 | void vrdotp_vv_u16_m1_golden(uint64_t *mask,uint16_t *a,uint16_t *b,uint16_t *c,uint16_t *exp_result) {
      |                                                         ~~~~~~~~~~^
vrdotp_vv_u16_m1.c:40:17: warning: declaration of 'c' shadows a parameter [-Wshadow]
   40 |     uint16x32_t c;
      |                 ^
vrdotp_vv_u16_m1.c:30:79: note: shadowed declaration is here
   30 | void vrdotp_vv_u16_m1_golden(uint64_t *mask,uint16_t *a,uint16_t *b,uint16_t *c,uint16_t *exp_result) {
      |                                                                     ~~~~~~~~~~^
vrdotp_vv_u16_m1.c:47:14: warning: declaration of 'exp_result' shadows a parameter [-Wshadow]
   47 |     uint16_t exp_result[32] = {0};
      |              ^~~~~~~~~~
vrdotp_vv_u16_m1.c:30:91: note: shadowed declaration is here
   30 | void vrdotp_vv_u16_m1_golden(uint64_t *mask,uint16_t *a,uint16_t *b,uint16_t *c,uint16_t *exp_result) {
      |                                                                                 ~~~~~~~~~~^~~~~~~~~~
vrdotp_vv_u16_m1.c:49:5: warning: implicit declaration of function 'data_init_bool'; did you mean 'data_init_scalar'? [-Wimplicit-function-declaration]
   49 |     data_init_bool(mask, exp_mask, 32, 0xffff);
      |     ^~~~~~~~~~~~~~
      |     data_init_scalar
vrdotp_vv_u16_m1.c: In function 'vrdotp_vv_u16_m1_golden':
vrdotp_vv_u16_m1.c:78:1: error: expected declaration or statement at end of input
   78 | }
      | ^
vrdotp_vv_u16_m1.c:30:40: warning: unused parameter 'mask' [-Wunused-parameter]
   30 | void vrdotp_vv_u16_m1_golden(uint64_t *mask,uint16_t *a,uint16_t *b,uint16_t *c,uint16_t *exp_result) {
      |                              ~~~~~~~~~~^~~~
vrdotp_vv_u16_m1.c:30:55: warning: unused parameter 'a' [-Wunused-parameter]
   30 | void vrdotp_vv_u16_m1_golden(uint64_t *mask,uint16_t *a,uint16_t *b,uint16_t *c,uint16_t *exp_result) {
      |                                             ~~~~~~~~~~^
vrdotp_vv_u16_m1.c:30:67: warning: unused parameter 'b' [-Wunused-parameter]
   30 | void vrdotp_vv_u16_m1_golden(uint64_t *mask,uint16_t *a,uint16_t *b,uint16_t *c,uint16_t *exp_result) {
      |                                                         ~~~~~~~~~~^
vrdotp_vv_u16_m1.c:30:79: warning: unused parameter 'c' [-Wunused-parameter]
   30 | void vrdotp_vv_u16_m1_golden(uint64_t *mask,uint16_t *a,uint16_t *b,uint16_t *c,uint16_t *exp_result) {
      |                                                                     ~~~~~~~~~~^
vrdotp_vv_u16_m1.c:30:91: warning: unused parameter 'exp_result' [-Wunused-parameter]
   30 | void vrdotp_vv_u16_m1_golden(uint64_t *mask,uint16_t *a,uint16_t *b,uint16_t *c,uint16_t *exp_result) {
      |                                                                                 ~~~~~~~~~~^~~~~~~~~~
At top level:
vrdotp_vv_u16_m1.c:35:5: warning: 'main' defined but not used [-Wunused-function]
   35 | int main(void) {
      |     ^~~~
make[1]: *** [/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vrdotp_vv_u16_m1.o] Error 1
make: *** [bare] Error 2
======================================================================

 target	:	deccription
****************************
 bare	:	build application on baremental case. param: type=app-type app=app-name

 rbb	:	run bare-app on beak. (build it firstly if modified) param: APP_TYPE=type APP_NAME=app-name , bp=beak-param

 clean		:	delete objects generated by make
****************************

/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/scripts/gorun.sh /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test "make -j4 APP_TYPE=test APP_NAME=vrdotp_vv_u16_m1"
~/workspace/risc-v/rivai/riscv-intrinsic-testing/test ~/workspace/risc-v/rivai/riscv-intrinsic-testing
make[1]: Entering directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
    CC vrdotp_vv_u16_m1.c
Makefile:73: recipe for target '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vrdotp_vv_u16_m1.o' failed
make[1]: Leaving directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
Makefile:37: recipe for target 'bare' failed